--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
 <a href="{% url 'home' %}">Resume</a>
 |
  <a href="{% url 'about' %}">🫂 सामाजिक-भावनात्मक शिक्षा (SEL)</a>
+|
+<a href="{% url 'sas' %}">Self Acceptance Statement</a>
 </header>
 
 {% block content %}
